--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parvej portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="styles/potfolio.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="styles/potfolio.css">
 
 </head>
+
 <body class="font-open-sans">
     <header>
         <nav>
@@ -23,8 +26,24 @@
                 <li> <button class="btn">Hire Me</li></button>
             </ul>
         </nav>
+        <section id="banner">
+            <div class="baner-contant">
+                <h2>Hi, I am</h2>
+                <h1>Mary Hardy</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society
+                    behaved moments.</p>
+                <div>
+                    <button class="btn">Download CV</button>
+                    <button class="btn">Contact</button>
+                </div>
+            </div>
+            <div class="banner-image">
+                <img src="images/hardy.png" alt="">
+            </div>
+        </section>
 
     </header>
-    
+
 </body>
+
 </html>
