--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <h1>Mary Hardy</h1>
                 <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society
                     behaved moments.</p>
-                <div>
+                <div class="btn-group">
                     <button class="btn"><i class="fa-solid fa-download"></i> Download CV</button>
                     <button class="btn"> <i class="fa-solid fa-phone"></i> Contact</button>
                 </div>
@@ -44,7 +44,7 @@
         </section>
 
     </header>
-    <section id="about">
+    <section id="about" >
         <div class="about-container">
             <div class="section-heading">
                 <h2>About Me</h2>
@@ -76,7 +76,7 @@
             </div>
         </div>
     </section>
-    <section id="skills">
+    <section id="skills" >
         <div class="skills-container">
             <div class="section-heading">
                 <h2>What I do</h2>
@@ -203,8 +203,8 @@
 
 
     </section>
-    <footer>
-        <section class="footer-container">
+    <footer >
+        <section class="footer-container" >
             <div class="socail">
                 <h2>Lets content</h2>
                 <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET,
